--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-              <a class="nav-link" href="#afterintro">Features</a>
+              <a class="nav-link" >Features</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="#prod">Team</a>
+              <a class="nav-link" >Team</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="#cent">Sign In</a>
+              <a class="nav-link" >Sign In</a>
           </li>
       </ul>
    </div>
@@ -65,10 +65,7 @@
     family, and co-workers.</p>
     <div class="row">
       <div class="col2 col-lg-6" >
-      <input type="text" style="
-    width: 100%;
-    height: 150%;
-" placeholder="email@example.com">
+      <input type="text" class="inp" placeholder="email@example.com">
 </div>
       <div class="col2 col-lg-6">
 <button type="button" class="btn2"  >Get Started </button>
@@ -126,11 +123,7 @@
 <div class="col-lg-6">
 
 
-    <input type="text" style="
-    height: 40%;
-    width: 80%;
-    margin-bottom: 10px;
-"  placeholder="email@example.com"><br>
+    <input type="text" class="inp1" placeholder="email@example.com"><br>
 
 
 <button type="button" class="btn3"  >  Get Started For Free </button>
