--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <div class="container-fluid">
   <div class="row1 row">
     <div class="col1 col-lg-6 order-lg-12">
-      <img src="images\illustration-1.svg" alt="illu" class="img-fluid"style="width:80%;">
+      <img src="images/illustration-1.svg" alt="illu" class="img-fluid"style="width:80%;">
 
 
     </div>
@@ -74,7 +74,7 @@
 </div>
 </div>
 <div >
-<img src="images\bg-curve-desktop.svg" alt="curve" class="img-fluid" style="z-index:-1">
+<img src="images/bg-curve-desktop.svg" alt="curve" class="img-fluid" style="z-index:-1">
 </div>
 
 
@@ -82,7 +82,7 @@
   <div class="container-fluid">
     <div class="row2 row">
       <div class="col1 col-lg-6 order-lg-12">
-        <img src="images\illustration-2.svg" alt="illu" class="img-fluid"style="width:80%;">
+        <img src="images/illustration-2.svg" alt="illu" class="img-fluid"style="width:80%;">
 </div>
 
     <div class="col1 col-lg-6 order-lg-1">
@@ -95,14 +95,14 @@
   live collaboration. No email attachments required!</p>
 <div class="a2">
   <a class="a1" href="#">See how Fylo works</a>
-<img src="images\icon-arrow.svg" alt="arrow">
+<img src="images/icon-arrow.svg" alt="arrow">
 </div>
 <div class="two">
-<img src="images\icon-quotes.svg" alt="quotes" style="width: 10%;"><br>
+<img src="images/icon-quotes.svg" alt="quotes" style="width: 10%;"><br>
 
   <p>Fylo has improved our team productivity by an order of magnitude. Since
   making the switch our team has become a well-oiled collaboration machine.</p>
-<img src="images\avatar-testimonial.jpg" class="img1 img-fluid" alt="avatar">
+<img src="images/avatar-testimonial.jpg" class="img1 img-fluid" alt="avatar">
   <h5>Kyle Burton</h5>
   Founder & CEO, Huddle
 </div>
